[package]
name = "solana-credit-score"
description = "Orders Solana validators by their credit score"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
chrono = "0.4.38"
clap = { version = "3", features = ["cargo"] }
criterion-stats = "0.3.0"
curl = "0.4.46"
log = "0.4.17"
reqwest = "0.11"
serde_json = "1.0.122"
solana-clap-v3-utils = "=2.0.4"
solana-cli-config = "=2.0.4"
solana-client = "=2.0.4"
solana-logger = "=2.0.4"
solana-sdk = "=2.0.4"
solana-transaction-status = "=2.0.4"
tokio = { version = "1", features = ["full"] }
url = "2.5.2"

[dev-dependencies]
solana-test-validator = "=2.0.4"

[workspace]
